[gd_scene load_steps=17 format=2]

[ext_resource path="res://Char.gd" type="Script" id=1]
[ext_resource path="res://Tiles/Character/idle1.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Character/idle2.png" type="Texture" id=3]
[ext_resource path="res://Tiles/Character/idle3.png" type="Texture" id=4]
[ext_resource path="res://Tiles/Character/r1.png" type="Texture" id=5]
[ext_resource path="res://Tiles/Character/r2.png" type="Texture" id=6]
[ext_resource path="res://Tiles/Character/r3.png" type="Texture" id=7]
[ext_resource path="res://Tiles/Character/r4.png" type="Texture" id=8]
[ext_resource path="res://Tiles/Character/ar1.png" type="Texture" id=9]
[ext_resource path="res://Tiles/Character/ar2.png" type="Texture" id=10]
[ext_resource path="res://Tiles/Character/ar3.png" type="Texture" id=11]
[ext_resource path="res://Tiles/Character/ar4.png" type="Texture" id=12]
[ext_resource path="res://Interface.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "swing",
"speed": 9.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 11.097, 7.47246 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 5.11568, 7.4926 )

[node name="Char" type="KinematicBody2D"]

position = Vector2( 181.042, 103.927 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( -0.421304, 0.0501671 )
scale = Vector2( 0.967592, 1.00627 )
frames = SubResource( 1 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[node name="Swing" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 4.7606, 0.34362 )
scale = Vector2( 0.229718, 0.745987 )
shape = SubResource( 2 )
disabled = true

[node name="Ray_raiht" type="RayCast2D" parent="." index="2"]

position = Vector2( 3, 0 )
scale = Vector2( 1, 0.7 )
enabled = true
exclude_parent = true
cast_to = Vector2( 9, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Ray_left" type="RayCast2D" parent="." index="3"]

position = Vector2( -3, 0 )
scale = Vector2( 1, 0.7 )
enabled = true
exclude_parent = true
cast_to = Vector2( -9, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="run" type="CollisionShape2D" parent="." index="4"]

position = Vector2( -0.995899, 0.704671 )
scale = Vector2( 0.835232, 0.949722 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="." index="5"]

position = Vector2( -5.37776, -7.04594 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Offset", "Smoothing" ]

[node name="Interface" type="CanvasLayer" parent="." index="6"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 13 )

[node name="HP" type="Label" parent="Interface" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_top = 19.0
margin_right = 83.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "HP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MP" type="Label" parent="Interface" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_top = 19.0
margin_right = 166.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "MP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Potion" type="Label" parent="Interface" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 158.0
margin_right = 72.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Potion"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Coin" type="Label" parent="Interface" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_top = 158.0
margin_right = 147.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Gold:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]


